# kursovaya_3

./: README.md  pyproject.toml
src/: main.py  masks.py  utils.py
tests/: test_masks.py  test_utils.py
