[tool.poetry]
name = "kursovaya-3"
version = "0.1.0"
description = ""
authors = ["Ivan Zuev <ivan.zuev.1984@mail.ru>"]
readme = "README.md"
packages = [{include = "kursovaya_3"}]

[tool.poetry.dependencies]
python = "^3.11"
lint = "^1.2.1"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
